NEWBUS-776 - Fixed header z-index

--- a/less/business.less
+++ b/less/business.less
@@ -2928,11 +2928,7 @@ h1.deck-header {
 			}
 		}
 		span {
-			background: @biz-pink;
 			display: inline-block;
-			padding: 0 5px 0 0;
-			z-index: 2;
-			position: relative;
 		}
 		/*&:after {
 			position: absolute;
